language/move-prover/tests/sources/functional/shift.exp
Move prover returns: exiting with verification errors
error: post-condition does not hold
   ┌─ tests/sources/functional/shift.move:95:9
   │
95 │         ensures result == x << 10u8;
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/sources/functional/shift.move:65: shift_l_11_incorrect
   =         x = <redacted>
   =     at tests/sources/functional/shift.move:66: shift_l_11_incorrect
   =         result = <redacted>
   =     at tests/sources/functional/shift.move:67: shift_l_11_incorrect
   =     at tests/sources/functional/shift.move:95: shift_l_11_incorrect (spec)

error: post-condition does not hold
   ┌─ tests/sources/functional/shift.move:38:9
   │
38 │         ensures result == x * 128 + 1;
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/sources/functional/shift.move:33: shiftl_7_incorrect
   =         x = <redacted>
   =     at tests/sources/functional/shift.move:34: shiftl_7_incorrect
   =         result = <redacted>
   =     at tests/sources/functional/shift.move:35: shiftl_7_incorrect
   =     at tests/sources/functional/shift.move:38: shiftl_7_incorrect (spec)

error: post-condition does not hold
   ┌─ tests/sources/functional/shift.move:54:9
   │
54 │         ensures result == x / 128 + 1;
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/sources/functional/shift.move:49: shiftr_7_incorrect
   =         x = <redacted>
   =     at tests/sources/functional/shift.move:50: shiftr_7_incorrect
   =         result = <redacted>
   =     at tests/sources/functional/shift.move:51: shiftr_7_incorrect
   =     at tests/sources/functional/shift.move:54: shiftr_7_incorrect (spec)

error: post-condition does not hold
    ┌─ tests/sources/functional/shift.move:105:9
    │
105 │         ensures result == x << a;
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/shift.move:98: var_shift_l_incorrect
    =         x = <redacted>
    =         a = <redacted>
    =     at tests/sources/functional/shift.move:99: var_shift_l_incorrect
    =         result = <redacted>
    =     at tests/sources/functional/shift.move:100: var_shift_l_incorrect
    =     at tests/sources/functional/shift.move:105: var_shift_l_incorrect (spec)

error: post-condition does not hold
    ┌─ tests/sources/functional/shift.move:147:9
    │
147 │         ensures result == x << a;
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/shift.move:140: var_shift_l_incorrect_u256
    =         x = <redacted>
    =         a = <redacted>
    =     at tests/sources/functional/shift.move:141: var_shift_l_incorrect_u256
    =         result = <redacted>
    =     at tests/sources/functional/shift.move:142: var_shift_l_incorrect_u256
    =     at tests/sources/functional/shift.move:147: var_shift_l_incorrect_u256 (spec)

error: post-condition does not hold
    ┌─ tests/sources/functional/shift.move:126:9
    │
126 │         ensures result == x << a;
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/shift.move:119: var_shift_l_incorrect_u32
    =         x = <redacted>
    =         a = <redacted>
    =     at tests/sources/functional/shift.move:120: var_shift_l_incorrect_u32
    =         result = <redacted>
    =     at tests/sources/functional/shift.move:121: var_shift_l_incorrect_u32
    =     at tests/sources/functional/shift.move:126: var_shift_l_incorrect_u32 (spec)
